Linking LPA appeal list to HAS and full questionnaires

--- a/app/views/_includes/lpa/current-appeals.html
+++ b/app/views/_includes/lpa/current-appeals.html
@@ -40,7 +40,7 @@
     rows: [
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345264&action=&questionnaire=overdue">1345301</a>'
+          html: '<a href="/manage/appeals/v6/appeal-details?appealCode=1345301&action=&questionnaire=overdue">1345301</a>'
         },
         {
           html: 'Spital House, Lensfield Rd, Cambridge CB2 1ER'
@@ -56,13 +56,13 @@
           format: 'numeric'
         },
         {
-          html: '<a href="/manage/questionnaire-has/v6/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+          html: '<a href="/manage/questionnaire/v14/task-list?appealCode=1345301&action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345264&action=&questionnaire=due">1345264</a>'
+          html: '<a href="/manage/appeals/v6/appeal-details?appealCode=1345264&action=&questionnaire=due">1345264</a>'
         },
         {
           html: 'Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT'
@@ -78,13 +78,13 @@
           format: 'numeric'
         },
         {
-          html: '<a href="/manage/questionnaire-has/v6/task-list?action=&questionnaire=due"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+          html: '<a href="/manage/questionnaire/v14/task-list?appealCode=1345264&action=&questionnaire=due"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
           format: 'numeric'
         }
       ] if data['questionnaire'] != 'complete',
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345260&action=">1345260</a>'
+          html: '<a href="/manage/appeals/v6/appeal-details?appealCode=1345260&action=">1345260</a>'
         },
         {
           html: '20 Bermuda Rd, Arbury, Cambridge CB4 3JX'
@@ -100,13 +100,13 @@
           format: 'numeric'
         },
         {
-          html: '<a href="/manage/questionnaire-has/v6/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+          html: '<a href="/manage/questionnaire-has/v6/task-list?appealCode=1345260&action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345260&action=">1345176</a>'
+          html: '<a href="/manage/appeals/v6/appeal-details?appealCode=1345176&action=">1345176</a>'
         },
         {
           html: '22 London Rd, Six Mile Bottom, Newmarket CB8 0UE'
@@ -122,13 +122,13 @@
           format: 'numeric'
         },
         {
-          html: '<a href="/manage/questionnaire-has/v6/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+          html: '<a href="/manage/questionnaire/v14/task-list?appealCode=1345176&action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345260&action=">1345259</a>'
+          html: '<a href="#">1345259</a>'
         },
         {
           html: 'Five Trees Garden, Cambridge CB4 1UA'
@@ -144,13 +144,13 @@
           format: 'numeric'
         },
         {
-          html: '<a href="/manage/questionnaire-has/v6/task-list?action="><span class="govuk-visually-hidden">Submit </span>Final comment</a>',
+          html: '<a href="#"><span class="govuk-visually-hidden">Submit </span>Final comment</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345172&action=&questionnaire=due">1345172</a>'
+          html: '<a href="#">1345172</a>'
         },
         {
           html: '64 Rene Court, Coldham’s Rd, Cambridge CB1 3EW'
@@ -166,13 +166,13 @@
           format: 'numeric'
         },
         {
-          html: '<a href="/manage/questionnaire-has/v6/task-list?action="><span class="govuk-visually-hidden">Submit </span>Final comment</a>',
+          html: '<a href="#"><span class="govuk-visually-hidden">Submit </span>Final comment</a>',
           format: 'numeric'
         }
       ],
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345172&action=&questionnaire=due">1345172</a>'
+          html: '<a href="#">1345172</a>'
         },
         {
           html: 'The Old Library, 2 Wheeler St, Cambridge CB2 3QB'
@@ -193,7 +193,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v5/appeal-details?appealCode=1345172&action=&questionnaire=due">1345172</a>'
+          html: '<a href="#">1345172</a>'
         },
         {
           html: 'Unnamed Road, Cambridge CB2 1PZ'
