--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -51,7 +51,7 @@
 
         {{ govukButton({
           html: 'View full dashboard',
-          href: 'v6/?action=&questionnaire=complete&submitted-appeals=yes&current-appeals=yes&new-appeals=yes',
+          href: 'v6/?action=&questionnaire=due&questionnaire-banner=no&current-appeals=yes&submitted-appeals=yes',
           isStartButton: true
         }) }}
 
