--- a/app/views/manage/questionnaire/v14/site-access/neighbours-land.html
+++ b/app/views/manage/questionnaire/v14/site-access/neighbours-land.html
@@ -8,6 +8,19 @@
   <span class="govuk-caption-l">
     Site access
   </span>
+
+  {% set detailsHTML %}
+    {{ govukTextarea({
+      name: 'neighbours-land__details',
+      id: 'neighbours-land__details',
+      value: data['neighbours-land__details'],
+      rows: '3',
+      label: {
+        html: 'Enter the reason'
+      }
+    }) }}
+  {% endset %}
+
   {{ govukRadios({
     idPrefix: 'neighbours-land',
     name: 'neighbours-land',
@@ -23,7 +36,10 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('neighbours-land','Yes')
+        checked: checked('neighbours-land','Yes'),
+        conditional: {
+          html: detailsHTML
+        }
       },
       {
         html: 'No',
