Update to meta data for S78 LPAQ / full appeal

--- a/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
+++ b/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
@@ -19,7 +19,9 @@
       Appeal type
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">Full appeal</p>
+      <p class="govuk-body">
+        S78 / Full appeal
+      </p>
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -27,7 +29,7 @@
       Appeal site
     </dt>
     <dd class="govuk-summary-list__value">
-      21 Cheers Drive, Speedwell, Bristol BS5 7FQ
+      Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT
     </dd>
   </div>
   <div class="govuk-summary-list__row">
