--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -42,7 +42,7 @@
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'v'+version+'/access/email-appeal-started',
+      href: '/manage/appeals/v6?questionnaire=due&questionnaire-banner=no',
       isStartButton: true
     }) }}
 
