S78 LPAQ - upload planning officer’s report

--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -42,7 +42,7 @@
 
     {{ govukButton({
       html: 'View prototype',
-      href: '/manage/appeals/v6?questionnaire=due&questionnaire-banner=no',
+      href: 'v'+version+'/task-list',
       isStartButton: true
     }) }}
 
