--- a/app/views/manage/questionnaire/v14/po-report/report-upload.html
+++ b/app/views/manage/questionnaire/v14/po-report/report-upload.html
@@ -1,25 +1,23 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set title = "Upload the planning officer’s report or what your decision notice would have said" %}
+
 {% block questions %}
 
   <span class="govuk-caption-l">
     Planning officer’s report and supporting documents
   </span>
+  <h1 class="govuk-heading-l">
+    {{ title }}
+  </h1>
 
-  {% if data['non-determination'] == 'true' %}
-    {% set title = 'Upload what your decision notice would have said' %}
-    <h1 class="govuk-heading-l">
-      {{ title }}
-    </h1>
-    <p class="govuk-body">Upload a copy of what your decision notice would have said if you’d decided the application.</p>
-  {% else %}
-    {% set title = 'Upload the planning officer’s report' %}
-    <h1 class="govuk-heading-l">
-      {{ title | safe }}
-    </h1>
-    <p class="govuk-body">Upload the planning officer’s report to committee or delegated report on the application, and any other relevant documents or minutes.</p>
-  {% endif %}
+  <p class="govuk-body">
+    Upload the planning officer’s report to committee or delegated report on the application. You can also upload any other relevant documents or minutes.
+  </p>
 
+  <p class="govuk-body">
+    If you did not make a decision for the application, upload a copy of what your decision notice would have said.
+  </p>
 
   {% set uploadHtml %}
     {{ govukFileUpload({
