--- a/app/views/manage/questionnaire/v14/notified/notified-how.html
+++ b/app/views/manage/questionnaire/v14/notified/notified-how.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'How did you notify people about the planning application?' %}
+{% set title = 'How did you notify relevant parties about the planning application?' %}
 
 {% block questions %}
 
