--- a/app/views/manage/questionnaire/v14/constraints/green-belt.html
+++ b/app/views/manage/questionnaire/v14/constraints/green-belt.html
@@ -2,33 +2,75 @@
 
 {% set title = 'Is the site in a green belt?' %}
 
+{% set prototypeLinks = [
+  {
+    href: 'green-belt?titleVersion=a',
+    text: 'Switch content'
+  } if data['titleVersion'] == 'b' else
+  {
+    href: 'green-belt?titleVersion=b',
+    text: 'Switch content'
+  }
+] %}
+
 {% block questions %}
 
   <span class="govuk-caption-l">
     Constraints, designations and other issues
   </span>
 
-  {{ govukRadios({
-    idPrefix: 'green-belt',
-    name: 'green-belt',
-    fieldset: {
-      legend: {
-        html: title,
-        classes: 'govuk-fieldset__legend--l',
-        isPageHeading: true
-      }
-    },
-    items: [
-      {
-        html: 'Yes',
-        value: 'Yes',
-        checked: checked('green-belt','Yes')
+  {% if data['titleVersion'] == 'a' %}
+
+    {{ govukRadios({
+      idPrefix: 'green-belt',
+      name: 'green-belt',
+      fieldset: {
+        legend: {
+          html: title,
+          classes: 'govuk-fieldset__legend--l',
+          isPageHeading: true
+        }
       },
-      {
-        html: 'No',
-        value: 'No',
-        checked: checked('green-belt','No')
-      }
-    ]
-  }) }}
+      items: [
+        {
+          html: 'Yes',
+          value: 'Yes',
+          checked: checked('green-belt','Yes')
+        },
+        {
+          html: 'No',
+          value: 'No',
+          checked: checked('green-belt','No')
+        }
+      ]
+    }) }}
+
+  {% else %}
+
+    {{ govukRadios({
+      idPrefix: 'green-belt',
+      name: 'green-belt',
+      fieldset: {
+        legend: {
+          html: 'Is the appeal site in a green belt?',
+          classes: 'govuk-fieldset__legend--l',
+          isPageHeading: true
+        }
+      },
+      items: [
+        {
+          html: 'Yes',
+          value: 'Yes',
+          checked: checked('green-belt','Yes')
+        },
+        {
+          html: 'No',
+          value: 'No',
+          checked: checked('green-belt','No')
+        }
+      ]
+    }) }}
+
+  {% endif %}
+
 {% endblock %}
