--- a/app/views/_includes/lpa/submitted-appeals.html
+++ b/app/views/_includes/lpa/submitted-appeals.html
@@ -32,6 +32,22 @@
     rows: [
       [
         {
+          html: '<a href="/manage/appeals/v6/appeal-details?appealCode=1345273&action=">1345273</a>'
+        },
+        {
+          html: '20 Bermuda Rd, Arbury, Cambridge CB4 3JX'
+        },
+        {
+          html: 'S78'
+        },
+        {
+          html: '<strong class="govuk-tag govuk-tag--yellow">
+                   Queued for checking
+                 </strong>'
+        }
+      ] if data['statement'] == 'complete',
+      [
+        {
           html: '<a href="v5/appeal-details?appealCode=1345264&action=">1345264</a>'
         },
         {
