--- a/app/views/manage/statement/v1/confirmation.html
+++ b/app/views/manage/statement/v1/confirmation.html
@@ -35,7 +35,7 @@
       </p>
 
       <p class="govuk-!-margin-bottom-5">
-        <a href="/manage/appeals/v2/?statement=complete">Back to appeals</a>
+        <a href="/manage/appeals/v6/?statement=complete&statement-banner=yes">Back to appeals</a>
       </p>
 
     </div>
