--- a/app/views/manage/appeals/v6/index.html
+++ b/app/views/manage/appeals/v6/index.html
@@ -32,6 +32,26 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      {% if data['statement-banner'] == 'yes' %}
+
+        <!-- notification about notices -->
+        {% set html %}
+          <h3 class="govuk-notification-banner__heading">
+            Statement complete
+          </h3>
+          <p class="govuk-body">
+            Statement for appeal {{ data['appealCode']}} has been <a href="?statement-banner=submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
+          </p>
+        {% endset %}
+
+        {{ govukNotificationBanner({
+          html: html,
+          type: 'success'
+        }) }}
+
+      {% endif %}
+
+
       {% if data['questionnaire-banner'] == 'yes' %}
 
         <!-- notification about notices -->
