--- a/app/views/manage/questionnaire/v14/confirmation.html
+++ b/app/views/manage/questionnaire/v14/confirmation.html
@@ -37,7 +37,7 @@
       </p>
 
       <p class="govuk-body">
-        <a href="../../appeals/v6/?no-appeals=false&questionnaire=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
+        <a href="../../appeals/v6/?no-appeals=false&questionnaire=complete&questionnaire-banner=yes" class="govuk-link--no-visited-state">View your planning appeals</a>
       </p>
 
     </div>
