--- a/app/views/manage/questionnaire/v14/task-list.html
+++ b/app/views/manage/questionnaire/v14/task-list.html
@@ -27,14 +27,13 @@
 
     <div class="govuk-grid-column-full">
       {% include "_includes/appeal-content/lpa-full-appeal-meta.html" %}
-
     </div>
 
     <div class="govuk-grid-column-three-quarters-from-desktop">
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
-      <h2 class="govuk-heading-s">
+      <h2 class="govuk-heading-m">
         Complete the questionnaire
       </h2>
       <p class="govuk-!-margin-bottom-7">You have completed {{count}} of 8 sections.</p>
