--- a/app/views/_includes/lpa/submitted-appeals.html
+++ b/app/views/_includes/lpa/submitted-appeals.html
@@ -32,6 +32,22 @@
     rows: [
       [
         {
+          html: '<a href="#">1345259</a>'
+        },
+        {
+          html: 'Five Trees Garden, Cambridge CB4 1UA'
+        },
+        {
+          html: 'S39'
+        },
+        {
+          html: '<strong class="govuk-tag govuk-tag--yellow">
+                   Queued for checking
+                 </strong>'
+        }
+      ] if data['final-comments'] == 'complete',
+      [
+        {
           html: '<a href="/manage/appeals/v6/appeal-details?appealCode=1345273&action=">1345273</a>'
         },
         {
