--- a/app/views/manage/appeals/v6/index.html
+++ b/app/views/manage/appeals/v6/index.html
@@ -32,15 +32,31 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      {% if data['questionnaire-banner'] == 'yes' %}
+
+        {% set html %}
+          <h3 class="govuk-notification-banner__heading">
+            Questionnaire complete
+          </h3>
+          <p class="govuk-body">
+            Questionnaire for appeal 1345264 has been <a href="?questionnaire-banner&questionnaire=complete&submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
+          </p>
+        {% endset %}
+        {{ govukNotificationBanner({
+          html: html,
+          type: 'success'
+        }) }}
+
+      {% endif %}
+
       {% if data['statement-banner'] == 'yes' %}
 
-        <!-- notification about notices -->
         {% set html %}
           <h3 class="govuk-notification-banner__heading">
             Statement complete
           </h3>
           <p class="govuk-body">
-            Statement for appeal {{ data['appealCode']}} has been <a href="?statement-banner=submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
+            Statement for appeal {{ data['appealCode']}} has been <a href="?statement-banner=&statement=complete&submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
           </p>
         {% endset %}
 
@@ -51,18 +67,17 @@
 
       {% endif %}
 
+      {% if data['final-comments-banner'] == 'yes' %}
 
-      {% if data['questionnaire-banner'] == 'yes' %}
-
-        <!-- notification about notices -->
         {% set html %}
           <h3 class="govuk-notification-banner__heading">
-            Questionnaire complete
+            Final comments complete
           </h3>
           <p class="govuk-body">
-            Questionnaire for appeal 1345264 has been <a href="?questionnaire-banner=questionnaire=complete&submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
+            Final comments for appeal {{ data['appealCode']}} has been <a href="?final-comments-banner=&final-comments=complete&submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
           </p>
         {% endset %}
+
         {{ govukNotificationBanner({
           html: html,
           type: 'success'
