--- a/app/views/manage/final-comments/v2/confirmation.html
+++ b/app/views/manage/final-comments/v2/confirmation.html
@@ -30,7 +30,7 @@
       <p class="govuk-body">We’ll check you’ve submitted everything we need to progress the appeal and will contact you if anything is missing.</p>
 
       <p class="govuk-body">
-        <a href="/manage/appeals/v3/?no-appeals=false&finalcomments=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
+        <a href="/manage/appeals/v6/?finalcomments=complete&final-comments-banner=yes" class="govuk-link--no-visited-state">View your planning appeals</a>
       </p>
 
     </div>
