A hearing / An inquiry, content tweak

--- a/app/views/manage/questionnaire/v14/appeal-process/procedure-reason.html
+++ b/app/views/manage/questionnaire/v14/appeal-process/procedure-reason.html
@@ -1,6 +1,10 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Why would you prefer a '+ (data['procedure'] | lower or 'inquiry') +'?' %}
+{% if data['procedure'] == 'Inquiry' %}
+  {% set title = 'Why would you prefer an inquiry?' %}
+{% else %}
+  {% set title = 'Why would you prefer a hearing?' %}
+{% endif %}
 
 {% block questions %}
 
