--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -23,14 +23,41 @@
 
     <section class="govuk-!-margin-bottom-6">
 
-      {% set version = "6" %}
-        <h2 class="govuk-heading-m">
-          Version {{version}}
-          {{ govukTag({
-            classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-            text: 'In progress'
-          }) }}
-        </h2>
+      {% set version = "7" %}
+      <h2 class="govuk-heading-m">
+        Version {{version}}
+        {{ govukTag({
+          classes: 'govuk-tag--yellow govuk-!-margin-left-2',
+          text: 'In progress'
+        }) }}
+      </h2>
+
+      <!-- <p>
+        Researched January 2023<br>
+        <a href="https://pins-ds.atlassian.net/l/cp/m5xUUVAn" class="govuk-link">
+          Confluence user research notes
+        </a>
+      </p> -->
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          appeals with submitted questionnaires drop down the main list
+        </li>
+        <!-- <li>
+          added decided appeals
+        </li> -->
+      </ul>
+
+      {{ govukButton({
+        html: 'View full dashboard',
+        href: 'v7/?action=&questionnaire=due&questionnaire-banner=no&current-appeals=yes&submitted-appeals=yes',
+        isStartButton: true
+      }) }}
+
+      {% set v6HTML %}
+
+        {% set version = "6" %}
 
         <!-- <p>
           Researched January 2023<br>
@@ -45,7 +72,7 @@
             new appeals in main table
           </li>
           <li>
-            added decided appeals
+            added decided appeals as a new view
           </li>
         </ul>
 
@@ -55,32 +82,34 @@
           isStartButton: true
         }) }}
 
+      {% endset -%}
+
       {% set v5HTML %}
 
-      {% set version = "5" %}
+        {% set version = "5" %}
 
-      <!-- <p>
-        Researched January 2023<br>
-        <a href="https://pins-ds.atlassian.net/l/cp/m5xUUVAn" class="govuk-link">
-          Confluence user research notes
-        </a>
-      </p> -->
+        <!-- <p>
+          Researched January 2023<br>
+          <a href="https://pins-ds.atlassian.net/l/cp/m5xUUVAn" class="govuk-link">
+            Confluence user research notes
+          </a>
+        </p> -->
 
-      <p class="govuk-!-margin-bottom-2">Changes:</p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          new appeals in details component
-        </li>
-        <li>
-          content updates
-        </li>
-      </ul>
+        <p class="govuk-!-margin-bottom-2">Changes:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>
+            new appeals in details component
+          </li>
+          <li>
+            content updates
+          </li>
+        </ul>
 
-      {{ govukButton({
-        html: 'View full dashboard',
-        href: 'v5/?action=&questionnaire=complete&submitted-appeals=yes&current-appeals=yes&new-appeals=yes',
-        isStartButton: true
-      }) }}
+        {{ govukButton({
+          html: 'View full dashboard',
+          href: 'v5/?action=&questionnaire=complete&submitted-appeals=yes&current-appeals=yes&new-appeals=yes',
+          isStartButton: true
+        }) }}
 
       {% endset -%}
 
@@ -189,7 +218,14 @@
       classes: 'govuk-!-margin-top-9',
       items: [
 
-
+        {
+          heading: {
+            html: 'Version 6 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v6HTML
+          }
+        },
         {
           heading: {
             html: 'Version 5 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
