--- a/app/views/manage/appeals/v4/appeal-details.html
+++ b/app/views/manage/appeals/v4/appeal-details.html
@@ -67,7 +67,7 @@
       <!-- due or completed appeal does not show a notification -->
     {% endif %}
 
-    <h1 class="govuk-heading-l">
+    <h1 class="govuk-heading-xl">
       Appeal {{ data['appealCode'] or '1345264' }}
     </h1>
 
@@ -80,7 +80,7 @@
 
   <div class="govuk-grid-column-two-thirds">
     {% if data['questionnaire'] == 'complete' %}
-      {% include "_includes/questionnaire-content/lpa-table-has-questionnaire.html" %}
+      {% include "_includes/lpa/questionnaire-content/has-questionnaire.html" %}
     {% endif %}
 
     <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
