--- a/app/views/manage/appeals/v7/appeal-details.html
+++ b/app/views/manage/appeals/v7/appeal-details.html
@@ -6,11 +6,35 @@
   {{ title }} - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% set prototypeLinks = [
+  {
+    href: '?questionnaire=due&statement=due&final-comments=&evidence=',
+    text: 'Questionnaire stage'
+  },
+  {
+    href: '?questionnaire=complete&statement=due&final-comments=&evidence=',
+    text: 'Questionnaire done'
+  },
+  {
+    href: '?questionnaire=complete&statement=complete&final-comments=&evidence=',
+    text: 'Statement done'
+  },
+  {
+    href: '?questionnaire=complete&statement=complete&final-comments=due&evidence=complete',
+    text: 'Cross-copied / final comments due'
+  },
+  {
+    href: '?questionnaire=complete&statement=complete&final-comments=complete&evidence=',
+    text: 'Final-comments done'
+  }
+  ]
+%}
+
 {% block beforeContent %}
 
   {{ govukBackLink({
     text: "Back to appeals",
-    href: "/manage/appeals/v6/?action="
+    href: "/manage/appeals/v7/?action="
   }) }}
 {% endblock %}
 
@@ -49,7 +73,7 @@
       <div class="govuk-notification-banner govuk-!-margin-bottom-3" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
         <div class="govuk-notification-banner__header">
           <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-            Important
+            Questionnaire due
           </h2>
         </div>
         <div class="govuk-notification-banner__content">
@@ -71,7 +95,7 @@
       <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
         <div class="govuk-notification-banner__header">
           <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-            Important
+            Appeal statement due
           </h2>
         </div>
         <div class="govuk-notification-banner__content">
@@ -87,7 +111,7 @@
       </div>
     {% endif %}
 
-    <h1 class="govuk-heading-l">
+    <h1 class="govuk-heading-xl">
       Appeal {{ data['appealCode'] or '1345264' }}
     </h1>
 
@@ -95,15 +119,71 @@
 
   <div class="govuk-grid-column-full">
     {% include "_includes/appeal-content/lpa-full-appeal-meta.html" %}
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
   </div>
 
-  <div class="govuk-grid-column-two-thirds">
-    {% if data['questionnaire'] == 'complete' %}
-      {% include "_includes/questionnaire-content/lpa-table-has-questionnaire.html" %}
-    {% endif %}
+  <div class="govuk-grid-column-full">
 
-    <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
+    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
+      {% if data['final-comments'] == 'complete' %}
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
+              Final comments
+            </span>
+          </h2>
+        </div>
+        <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
+          <!-- add link to final comments -->
+          <p class="govuk-body">(final comments)</p>
+        </div>
+      </div>
+      {% endif %}
+      {% if data['evidence'] == 'complete' %}
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
+              Evidence
+            </span>
+          </h2>
+        </div>
+        <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
+          <!-- add link to evidence -->
+          <p class="govuk-body">(list of evidence)</p>
+        </div>
+      </div>
+      {% endif %}
+      {% if data['statement'] == 'complete' %}
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
+              Statement
+            </span>
+          </h2>
+        </div>
+        <div id="accordion-default-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-3">
+          {% include "_includes/lpa/statement.html" %}
+        </div>
+      </div>
+      {% endif %}
+      {% if data['questionnaire'] == 'complete' %}
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
+              Questionnaire
+            </span>
+          </h2>
+        </div>
+        <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
+          {% include "_includes/lpa/s78-questionnaire.html" %}
+        </div>
+      </div>
+      {% endif %}
+    </div>
+
     {% include "_includes/appeal-content/lpa-table-has-submission.html" %}
   </div>
 
