Create a new appeal link for appellants/agents

--- a/app/views/appeal/more-than-one-appeal/v5/your-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v5/your-appeals.html
@@ -24,9 +24,15 @@
         {{ title }}
       </h1>
 
-      <p class="govuk-body govuk-!-margin-bottom-6">
+      <!-- <p class="govuk-body govuk-!-margin-bottom-6">
         <a href="/manage/manage-users/v3/" class="govuk-link--no-visited-state">
           Add and remove users
+        </a>
+      </p> -->
+
+      <p class="govuk-body govuk-!-margin-bottom-6">
+        <a href="/appeal/before-you-start/v15/lpa" class="govuk-link--no-visited-state">
+          Start a new appeal
         </a>
       </p>
 
