--- a/app/views/manage/appeals/v7/appeal-details.html
+++ b/app/views/manage/appeals/v7/appeal-details.html
@@ -17,7 +17,11 @@
   },
   {
     href: '?questionnaire=complete&statement=complete&final-comments=&evidence=',
-    text: 'Statement done'
+    text: 'LPA statement done'
+  },
+  {
+    href: '?questionnaire=complete&statement=complete&final-comments=&evidence=&appellantStatement=complete',
+    text: 'All statements done'
   },
   {
     href: '?questionnaire=complete&statement=complete&final-comments=due&evidence=complete',
@@ -167,7 +171,8 @@
           </h2>
         </div>
         <div id="accordion-default-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-3">
-          {% if data['appellantStatement'] %}
+
+          {% if data['appellantStatement'] == 'complete' %}
             {% include "_includes/appellant/statement.html" %}
           {% endif %}
 
