updated index page for the appellant dashboard

--- a/app/views/appeal/more-than-one-appeal/index.html
+++ b/app/views/appeal/more-than-one-appeal/index.html
@@ -35,9 +35,9 @@
       <li>
         alignment with LPA dashboard
       </li>
-      <!-- <li>
-        Using tags for decision status
-      </li> -->
+      <li>
+        link to make a new appeal
+      </li>
     </ul>
 
     <p class="govuk-body govuk-!-margin-bottom-6">
