LPA appeal detail added procedure type to meta data

--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -44,9 +44,9 @@
         <li>
           appeals with submitted questionnaires drop down the main list
         </li>
-        <!-- <li>
-          added decided appeals
-        </li> -->
+        <li>
+          added procedure type in meta data
+        </li>
       </ul>
 
       {{ govukButton({
